--- a/business-2/index.html
+++ b/business-2/index.html
@@ -70,15 +70,16 @@
         <div class="header-content">
             <div class="header-content-inner">
               <div class="col-sm-8">
-                <h1>Dramatically Engage</h1>
+                <h1>What the US government spent your taxes on.</h1>
                     <form>
-                    First name:<br>
-                    <input type="text" name="firstname"><br>
-                    Last name:<br>
-                    <input type="text" name="lastname">
+                    <p1>How much taxes did you pay?</p1><br>
+                    <input type="number" min="1" step="any" name="taxamount"><br>
+                  -OR-<br>
+                  <p1>What was your annual income?</p1><br>
+                    <input type="number" min="1" step="any" name="incomeamount">
                     </form>
                 <p>Objectively innovate empowered manufactured products whereas parallel platforms.</p>
-                <a href="#" class="btn btn-primary btn-lg">Engage Now</a>
+                <a href="#" class="btn btn-primary btn-lg">Let's Find Out</a>
               </div>
               <div class="col-sm-4">
                 <img src="images/ad.gif" alt="ad" class="rectangle">
