Added New Stuff

--- a/business-2/index.html
+++ b/business-2/index.html
@@ -73,22 +73,26 @@
                 <h1>What the US government spent your taxes on.</h1>
                     <form>
                     <p1>How much taxes did you pay?</p1><br>
-                    <input type="number" min="1" step="any" name="taxamount"><br>
-                  -OR-<br>
+                    <p2>$   </p2><input type="number" min="1" step="any" name="taxamount"><br>
+                  <p2>-OR-</p2><br>
                   <p1>What was your annual income?</p1><br>
-                    <input type="number" min="1" step="any" name="incomeamount">
+                    <p2>$   </p2><input type="number" min="1" step="any" name="incomeamount">
                     </form>
-                <p>Objectively innovate empowered manufactured products whereas parallel platforms.</p>
-                <a href="#" class="btn btn-primary btn-lg">Let's Find Out</a>
+                <p>The United State federal government spent four trillion dollars in 2017.
+                  This tool will tell you the amount of money you contributed to each specific category of the governments budget. </p>
+                <a href="#intro" class="btn btn-primary btn-lg">Let's Find Out</a>
+
               </div>
               <div class="col-sm-4">
                 <img src="images/ad.gif" alt="ad" class="rectangle">
+                <img src="images/ad.gif" alt="ad" class="rectangle2">
               </div>
             </div>
         </div>
     </header>
 
 	<!-- Intro Section -->
+  <div id="intro"></div>
     <section class="intro">
         <div class="container">
             <div class="row">
